<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/card_elevation"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="@dimen/product_square_size"
            android:layout_height="@dimen/product_square_size"
            android:layout_marginTop="@dimen/space_between_areas"
            android:background="@drawable/selected_product_selector">

            <ImageView
                android:id="@+id/product_view_ivProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/product_description"
                android:scaleType="centerCrop"
                android:src="@drawable/place_holder_default" />

            <ProgressBar
                android:id="@+id/product_view_pbProgressBar"
                android:layout_width="@dimen/progressBar_square_size"
                android:layout_height="@dimen/progressBar_square_size"
                android:layout_centerInParent="true"
                android:visibility="visible" />

        </RelativeLayout>

        <TextView
            android:id="@+id/product_view_tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_between_areas"
            android:text="@string/generic_product_title"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font_size_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/space_between_areas"
            android:layout_marginRight="@dimen/space_between_areas"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/product_view_tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_between_areas"
            android:text="@string/generic_product_price"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_size_price" />

    </LinearLayout>

</android.support.v7.widget.CardView>